# local_chat_app_with_mcp

./: .env  .gitignore  README.md  main.py  pyproject.toml  settings.json  settings_sample.json
static/: script.js  style.css
templates/: index.html
